--- a/app/src/main/res/layout/activity_charge_input_number.xml
+++ b/app/src/main/res/layout/activity_charge_input_number.xml
@@ -14,6 +14,7 @@
         android:id="@+id/nav"></com.isoftston.issuser.fusioncharge.weights.NavBar>
 
     <EditText
+        android:id="@+id/et_input_number"
         android:paddingLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -26,6 +27,7 @@
         android:inputType="number"/>
 
     <TextView
+        android:id="@+id/sure"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
